# morning-briefing

./: .gitignore  README.md  gcp-oauth-setup-checklist.md  morning-briefing-free-local-stack.md  morning-briefing-macos-compute.md  morning-briefing-poc-frontend-design.md  morning-briefing-ui-ux-mockup.md
morning-briefing-app-google/backend/: .env.example  pyproject.toml
morning-briefing-app-google/backend/app/: config.py  main.py
morning-briefing-app-google/backend/app/api/: auth.py  briefing.py  items.py
morning-briefing-app-google/backend/app/auth/: google_oauth.py  token_store.py
morning-briefing-app-google/backend/app/data/: models.py  repo.py
morning-briefing-app-google/backend/app/pipeline/: extractor.py
morning-briefing-app-google/backend/app/sources/: gmail.py
morning-briefing-app-google/backend/data/: briefing.db
morning-briefing-app-google/backend/mocks/: raw_inbox_founder.json  raw_inbox_hersh.json  raw_inbox_student.json
morning-briefing-app-google/backend/tests/: conftest.py  test_assembler.py  test_classifier.py  test_extractor.py  test_gmail_source.py  test_google_oauth.py  test_token_store.py
morning-briefing-app/backend/: .env.example  oauth_smoke.py  pyproject.toml
morning-briefing-app/backend/app/: config.py  main.py  types.py
morning-briefing-app/backend/app/api/: actions.py  auth.py  briefing.py
morning-briefing-app/backend/app/data/: db.py  models.py
morning-briefing-app/backend/app/pipeline/: assembler.py  classifier.py  ollama_client.py
morning-briefing-app/backend/app/sources/: mock_inbox.py
morning-briefing-app/backend/data/: briefing.db
morning-briefing-app/backend/tests/: test_api.py
(+71 files in other folders)
