[project]
name = "morning-briefing-backend"
version = "0.2.0"
description = "Morning briefing backend with real Google OAuth + Gmail/Calendar"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.6",
  "apscheduler>=3.10",
  "python-dateutil>=2.9",
  "google-auth>=2.36",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.150",
  "cryptography>=44.0",
  "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.22",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
